#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-06
2013-07-17 David Schneider
- Exporting the pstype version and TypeId into the python wrappers.

	
Tag: V00-08-05
2013-07-16 Andy Salnikov
- psana backend:
  - get rid of pragma pack
  - do not generate overloaded methods for ndarray return type

Tag: V00-08-04
2013-07-16 Andy Salnikov
- few small fixed for problems noticed by pylint
- add comments to the methods returning ndarrays concerning lifetime
  of the returned objects

Tag: V00-08-03
2013-07-11 Andy Salnikov
- move some pieces of code from DdlPds2Psana.py into data/templates/pds2psana.tmpl

Tag: V00-08-02
2013-07-10 David Schneider
- checking in new python wrappers that have been generated to export the enums 
  and constants from the pstypes.
	
Tag: V00-08-01
2013-07-10 Andy Salnikov
- cppcodegen.tmpl: fixt for type array data in new template stuff
- pds2psana backend: pass owner shared pointer to the pdsdata
  methods returning ndarray

Tag: V00-08-00
2013-07-10 Andy Salnikov
- more templates
- switching to templated classes in pds2psana backend

Tag: V00-07-01
2013-07-02 Andy Salnikov
- a bit more refactoring and simplification of templates
- adding code to store data

Tag: V00-07-00
2013-07-01 Andy Salnikov
- small scale refactoring of HDF5 backend, moved all Jinja2 templates to
  a data/templates/hdf5.tmpl library
- new class TemplateLoader implementing Jinja32 loader which finds templates
  in the above library
- replace more hard-coded code generation with Jinja2 templates

Tag: V00-06-07
2013-06-20 Andy Salnikov
- DdlPds2PsanaDispatch: do not produce warnings for duplicated event keys,